
2006-04-28 cjg

 * Fixed only-one-result bug. 
 * Made user methods only request one result for by-username etc.

2006-05-02 cjg

 * Minor style changes to LogHandler
 * Commended out not-yet-working GEOIP code.

2006-05-03 cjg

 * Remove duplicate ->connection line in Session
 * Added a check to current_user_cookie to check it's not in command line mode.
 * When an undef is passed into List->get_ids for the count, but not the offset,
    it now works out the correct value rather than printing a warning.
 * Made default directory /opt/eprints not /opt/eprints2
 * Updated bin/ scripts to use /opt/eprints/bin by default
 * auto apache config files are now stored in var dirs rather than cfg
 * removed config element sys_path as it is not used.

2006-05-04 cjg

 * Fixed bug in List which was introduced by the code which skipped caches 
    when only item was required. The bug occured when ALL items where 
    requested.
 * DataObj->render_full no longer renders subobjects.
 * Fixed a warning in DataObj/Subject.pm
 * ArchiveConfig can now handle an eprint without a valid userid.
 * New system field for EPrints - metadata_visibility which can either be 
    'show' meaning the normal behaviour, "no_search" which stops the 
    metadata appearing on public searches and browse, but does not hide 
    the abstract page, and "hide" which supresses the data and abstract 
    page from all non-registered users. no_search does not remove the item 
    from OAI, but hide does.
 * Fixed a DOM warning in oai2.

2006-05-08 cjg

 * When an eprint has its status changed or has its succeeds setting changed
    then it, the item it succeeds (if any) and the item it previously 
    succeeded (if any). 
 * Fixed bug in History that aborted with an error if the 1.xml file did not
    exist rather then rendering a warning and continuing.

2006-05-12 cjg

 * Removed debug line from FieldComponent.
 * Moved arround Input plugins to new layout. Fixed some minor issues like
    a missing ISA.
